--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -23,6 +23,15 @@
         android:title="@string/kill_app_longpress_back"
         android:summary="@string/kill_app_longpress_back_summary"/>
 
+    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        android:key="long_press_kill_delay"
+        android:title="@string/long_press_kill_delay"
+        android:max="3000"
+        settings:min="250"
+        settings:units="ms"
+        android:dependency="kill_app_longpress_back"
+        android:persistent="false" />
+
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="notification_guts_kill_app_button"
         android:title="@string/notification_guts_kill_app_button_title"
