DUTweaks: Longpress back to kill app [2/2]
Part two of https://github.com/zephiK/android_frameworks_base/commit/132a7a7e80beaf3ffa4c6428b30c2349569ed8d0
Originating commit from rascarlo - https://github.com/rascarlo/android_frameworks_base/commit/cc7cbd4c359bb88d0f482ca19b1c2285643cbe71

Change-Id: I7693f33a6e4dc7d04a12a1051e5b7cbd65b8203d
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -18,6 +18,11 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/buttons_title" >
 
+    <SwitchPreference
+        android:key="kill_app_longpress_back"
+        android:title="@string/kill_app_longpress_back"
+        android:summary="@string/kill_app_longpress_back_summary"/>
+
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="notification_guts_kill_app_button"
         android:title="@string/notification_guts_kill_app_button_title"
