--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -28,6 +28,13 @@
             android:targetClass="com.custom.ambient.display.DozeSettings" />
     </Preference>
 
+    <Preference
+            android:title="@string/lockscreen_tuner_title" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
+    </Preference>
+
     <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
         android:key="status_bar_locked_on_secure_keyguard"
         android:title="@string/lockscreen_qs_disabled_title"
