DUTweaks: Config to hide status bar on lock screen [2/2]
Change-Id: Ibdd59878252ca4798607112e3147b63c4a2d990b

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -42,10 +42,10 @@
         android:title="@string/switch_settings_title" >
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="hide_lockscreen_status_bar"
-            android:title="@string/hide_lockscreen_status_bar_title"
-            android:summary="@string/hide_lockscreen_status_bar_summary"
-            android:defaultValue="false" />
+            android:key="lockscreen_show_status_bar"
+            android:title="@string/lockscreen_show_status_bar_title"
+            android:summary="@string/lockscreen_show_status_bar_summary"
+            android:defaultValue="true" />
 
         <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
             android:key="hide_lockicon"
