--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -44,6 +44,12 @@
             android:defaultValue="true" /> 
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="force_expanded_notifications"
+            android:title="@string/force_expanded_notifications_title"
+            android:summary="@string/force_expanded_notifications_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="notification_headers"
             android:title="@string/notification_headers_title"
             android:summary="@string/notification_headers_summary"
