--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -59,6 +59,12 @@
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="false" />
 
+    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference 
+	android:key="hide_lock_shortcuts" 
+	android:title="@string/lockscreen_hide_shortcuts_title" 
+	android:summary="@string/lockscreen_hide_shortcuts_summary" 
+	android:defaultValue="false" />
+
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="pocket_judge"
         android:title="@string/pocket_judge_title"
