--- a/res/xml/visualizer_settings.xml
+++ b/res/xml/visualizer_settings.xml
@@ -18,8 +18,8 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
 	android:title="@string/lockscreen_visualizer_enable">
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="ambient_visualizer_enabled"
+    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+        android:key="ambient_visualizer"
         android:title="@string/ambient_visualizer_title"
         android:summary="@string/ambient_visualizer_summary"
         android:defaultValue="false"/>
@@ -45,6 +45,19 @@
         settings:interval="200"
         settings:units="ms"
         android:dependency="lockscreen_lavalamp_enabled"/>
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+	android:key="lock_screen_visualizer_use_custom_color"
+	android:title="@string/lockscreen_visualizer_enable_custom"
+	android:summary="@string/lockscreen_visualizer_enable_custom_summary"
+	android:defaultValue="false" />
+
+    <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
+	android:key="lock_screen_visualizer_custom_color"
+	android:title="@string/lockscreen_visualizer_custom_color"
+	android:dependency="lock_screen_visualizer_use_custom_color"
+	android:defaultValue="0xffffffff"
+	android:dialogTitle="@string/lockscreen_visualizer_custom_color" />
 
     <PreferenceCategory
         android:id="@+id/lockscreen_solid_lines_category"
