DUTweaks: Sensor block per-package switch [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -83,6 +83,12 @@
             android:entries="@array/entries_scrollingcache"
             android:entryValues="@array/values_scrollingcache" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+           android:key="sensor_block"
+           android:title="@string/sensor_block_title"
+           android:summary="@string/sensor_block_summary"
+           android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/gestures_stuff" >
 
