--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -46,4 +46,37 @@
             android:entryValues="@array/status_bar_battery_percentage_values"
             android:defaultValue="0" />
 
+    <PreferenceCategory
+        android:title="@string/battery_bar_title" >
+
+        <ListPreference
+            android:key="battery_bar_list"
+            android:title="@string/battery_bar_location"
+            android:entries="@array/battery_bar_entries"
+            android:entryValues="@array/battery_bar_values" />
+
+        <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
+            android:key="battery_bar_color"
+            android:title="@string/battery_bar_color"
+            android:defaultValue="0xffffffff"
+            android:dialogTitle="@string/battery_bar_color" />
+
+        <ListPreference
+            android:key="battery_bar_style"
+            android:title="@string/battery_bar_style_title"
+            android:entries="@array/battery_bar_style_entries"
+            android:entryValues="@array/battery_bar_style_values" />
+
+        <ListPreference
+            android:key="battery_bar_thickness"
+            android:title="@string/battery_bar_thickness_title"
+            android:entries="@array/battery_bar_thickness_entries"
+            android:entryValues="@array/battery_bar_thickness_values" />
+
+        <SwitchPreference
+            android:key="battery_bar_animate"
+            android:title="@string/battery_bar_animate_title"
+            android:summary="@string/battery_bar_animate_summary" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
