--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -67,11 +67,6 @@
             android:entries="@array/battery_bar_thickness_entries"
             android:entryValues="@array/battery_bar_thickness_values" />
 
-        <SwitchPreference
-            android:key="battery_bar_animate"
-            android:title="@string/battery_bar_animate_title"
-            android:summary="@string/battery_bar_animate_summary" />
-
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
             android:key="battery_bar_color"
             android:title="@string/battery_bar_color"
@@ -85,9 +80,31 @@
             android:dialogTitle="@string/battery_bar_color" />
 
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
-            android:key="battery_bar_battery_low_color"
+            android:key="battery_bar_battery_low_color_warning"
             android:title="@string/battery_bar_battery_low_color"
             android:defaultValue="0xFFFF6600"
+            android:dialogTitle="@string/battery_bar_color" />
+
+        <SwitchPreference
+            android:key="battery_bar_animate"
+            android:title="@string/battery_bar_animate_title"
+            android:summary="@string/battery_bar_animate_summary" />
+
+        <SwitchPreference
+            android:key="battery_bar_use_gradient_color"
+            android:title="@string/battery_bar_use_gradient_color"
+            android:summary="@string/battery_bar_gradient_color_summary" />
+
+        <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
+            android:key="battery_bar_low_color"
+            android:title="@string/battery_bar_low_color"
+            android:defaultValue="0xffff4444"
+            android:dialogTitle="@string/battery_bar_color" />
+
+        <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
+            android:key="battery_bar_high_color"
+            android:title="@string/battery_bar_high_color"
+            android:defaultValue="0xff99CC00"
             android:dialogTitle="@string/battery_bar_color" />
     </PreferenceCategory>
 
