--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -45,6 +45,14 @@
         android:persistent="false"
         android:defaultValue="0" />
 
+    <ListPreference
+        android:key="pref_scrollingcache"
+        android:dialogTitle="@string/pref_scrollingcache_title"
+        android:title="@string/pref_scrollingcache_title"
+        android:summary="@string/pref_scrollingcache_summary"
+        android:entries="@array/entries_scrollingcache"
+        android:entryValues="@array/values_scrollingcache" />
+
     <PreferenceCategory
         android:title="@string/switch_category">
 
