--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -19,4 +19,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="network_traffic_state"
+        android:title="@string/network_traffic_state_title"
+        android:summary="@string/network_traffic_state_summary"
+        android:defaultValue="true" />
+
+    <ListPreference
+        android:key="network_traffic_type"
+        android:title="@string/network_traffic_type"
+        android:entries="@array/show_network_traffic_type_entries"
+        android:entryValues="@array/show_network_traffic_type_values"
+        android:dependency="network_traffic_state"
+        android:defaultValue="0"
+        android:persistent="false" />
+
+    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        android:key="network_traffic_autohide_threshold"
+        android:title="@string/network_traffic_autohide_threshold_title"
+        android:max="10"
+        settings:min="0"
+        settings:units="" />
 </PreferenceScreen>
