--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -89,6 +89,12 @@
            android:summary="@string/sensor_block_summary"
            android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.GlobalSettingSwitchPreference
+           android:key="allow_signature_fake"
+           android:title="@string/allow_signature_fake"
+           android:summary="@string/allow_signature_fake_summary"
+           android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/gestures_stuff" >
 
