--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -31,6 +31,12 @@
             android:summary="@string/less_boring_heads_up_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="notification_sound_vib_screen_on"
+            android:title="@string/notification_sound_vib_screen_on_title"
+            android:summary="@string/notification_sound_vib_screen_on_summary"
+            android:defaultValue="true" />
+
     <PreferenceCategory
         android:key="notification_lights"
         android:title="@string/notification_lights">
