DUTweaks: Disabling quick settings on secure lock screens [2/2]
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Change-Id: I6aeba1a8c5f3b359cc89c8abdaa564ba66204acd

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -48,6 +48,12 @@
             android:defaultValue="true" />
 
         <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="status_bar_locked_on_secure_keyguard"
+            android:title="@string/lockscreen_qs_disabled_title"
+            android:summary="@string/lockscreen_qs_disabled_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
             android:key="hide_lockicon"
             android:title="@string/hide_lockicon_title"
             android:summary="@string/hide_lockicon_summary"
