--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -32,7 +32,7 @@
             android:key="lockclock_font_size"
             android:title="@string/lockclock_font_size_title"
             android:max="101"
-            settings:min="54"
+            settings:min="10"
             settings:units="dp"
             android:persistent="false"
             android:defaultValue="54" />
@@ -50,9 +50,28 @@
         <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
             android:key="lockdate_font_size"
             android:title="@string/lockdate_font_size_title"
-            android:max="25"
+            android:max="40"
             settings:min="10"
             settings:units="dp"
+            android:defaultValue="18"
+            android:persistent="false" />
+
+        <ListPreference
+            android:key="lock_ownerinfo_fonts"
+            android:title="@string/lock_ownerinfo_font_title"
+            android:dialogTitle="@string/lock_ownerinfo_font_dialog_title"
+            android:entries="@array/lock_clock_fonts_entries"
+            android:entryValues="@array/lock_clock_fonts_values"
+            android:summary="%s"
+            android:defaultValue="28"
+            android:persistent="false" />
+
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="lockowner_font_size"
+            android:title="@string/lockowner_font_size_title"
+            android:max="25"
+            settings:min="10"
+            settings:units="sp"
             android:defaultValue="18"
             android:persistent="false" />
 </PreferenceScreen>
