DUTweaks: Status bar notification ticker [2/2]
Configurable status bar ticker duration [1/2]

Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -58,4 +58,10 @@
         android:summary="@string/traffic_summary"
         android:fragment="com.dirtyunicorns.tweaks.fragments.TrafficIndicators" />
 
+    <com.dirtyunicorns.tweaks.preferences.CategoryPreference
+        android:key="ticker_category"
+        android:icon="@drawable/dt_ticker"
+        android:title="@string/ticker_title"
+        android:summary="@string/ticker_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.Ticker" />
 </PreferenceScreen>
