--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -58,4 +58,6 @@
     <!-- Whether to display power menu category -->
     <bool name="has_powermenu">true</bool>
 
+    <!-- Whether to display ticker category -->
+    <bool name="has_ticker">true</bool>
 </resources>
