--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -170,6 +170,12 @@
             android:summary="@string/brightness_icon_summary"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness_buttons"
+            android:title="@string/qs_show_brightness_buttons_title"
+            android:summary="@string/qs_show_brightness_buttons_summary"
+            android:defaultValue="true" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
