--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1119,6 +1119,7 @@
         <item>@string/theming_settings_dashboard_icons_random</item>
         <item>@string/theming_settings_dashboard_icons_random_bg_accent</item>
         <item>@string/theming_settings_dashboard_icons_accent_bg_random</item>
+        <item>@string/theming_settings_dashboard_icons_default_oneplus</item>
     </string-array>
 
     <string-array name="theming_settings_dashboard_icons_values" translatable="false">
@@ -1130,6 +1131,7 @@
         <item>5</item>
         <item>6</item>
         <item>7</item>
+        <item>8</item>
     </string-array>
 
     <!-- Pulse -->
