--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -29,15 +29,17 @@
         <item>0</item>
     </string-array>
 
-    <!-- Network Traffic View Placement -->
-    <string-array name="network_traffic_location_entries" translatable="false">
-        <item>@string/network_traffic_statusbar</item>
-        <item>@string/network_traffic_header</item>
+    <!-- Network traffic location -->
+    <string-array name="network_traffic_location_entries">
+        <item>@string/traffic_disabled</item>
+        <item>@string/traffic_statusbar</item>
+        <item>@string/traffic_expanded_statusbar</item>
     </string-array>
 
     <string-array name="network_traffic_location_values" translatable="false">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <!--- Volume key cursor control -->
