--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -77,6 +77,13 @@
             android:defaultValue="false" />
 
 	<com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="ambient_visualizer_enabled"
+            android:title="@string/ambient_visualizer_title"
+            android:summary="@string/ambient_visualizer_summary"
+            android:dependency="lockscreen_visualizer_enabled"
+            android:defaultValue="false"/>
+
+	<com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_media_metadata"
             android:title="@string/media_art_title"
             android:summary="@string/media_art_summary"
