DUTweaks: notch-city: Add 3 mode display cutout handler [3/3] crvs: adapt to android 10
[AgentFabulous - POSP]
- Add the respective control in here
- Also add a little video illustration I made to go along with it :)

Change-Id: I38fb439046db010b8b45f2bf9b83b7ce8879e044
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Genkzsz11 <genkzsz11@gmail.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -25,6 +25,12 @@
         android:fragment="com.dirtyunicorns.tweaks.fragments.RoundedCornersSettings" />
 
     <Preference
+        android:key="cutout_settings"
+        android:title="@string/cutout_main"
+        android:summary="@string/cutout_main_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.CutoutFragment"/>
+
+    <Preference
         android:key="animations_category"
         android:title="@string/animation_settings_title"
         android:summary="@string/animation_settings_summary"
