--- a/res/xml/button_volume_panel.xml
+++ b/res/xml/button_volume_panel.xml
@@ -28,6 +28,10 @@
         settings:units="sec" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="audio_panel_view_position"
+        android:title="@string/audio_panel_view_position_title" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="audio_panel_view_media"
         android:title="@string/audio_panel_view_media_title"
         android:defaultValue="false" />
