--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -34,6 +34,14 @@
         android:defaultValue="0"
         android:persistent="false" />
 
+    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        android:key="network_traffic_font_size"
+        android:title="@string/nettraf_font_size"
+        android:max="30"
+        settings:min="18"
+        settings:defaultValue="21"
+        settings:units="dp" />
+
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="network_traffic_hidearrow"
         android:title="@string/network_traffic_hidearrow"
