--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -87,16 +87,19 @@
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
             android:key="vibrate_on_connect"
             android:title="@string/incall_vibrate_connect_title"
+            android:summary="@string/incall_vibrate_connect_summary"
             android:defaultValue="true" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
             android:key="vibrate_on_callwaiting"
             android:title="@string/incall_vibrate_call_wait_title"
+            android:summary="@string/incall_vibrate_call_wait_summary"
             android:defaultValue="true" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
             android:key="vibrate_on_disconnect"
             android:title="@string/incall_vibrate_disconnect_title"
+            android:summary="@string/incall_vibrate_disconnect_summary"
             android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
