--- a/res/xml/powermenu.xml
+++ b/res/xml/powermenu.xml
@@ -48,6 +48,11 @@
         android:title="@string/powermenu_screenshot_title"
         android:defaultValue="true" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="powermenu_screenrecord"
+        android:title="@string/powermenu_screenrecord_title"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="powermenu_advanced_category"
         android:title="@string/sub_cat_advanced">
