--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -98,5 +98,13 @@
             settings:interval="5"
             android:defaultValue="100"
             android:dependency="lockscreen_media_metadata" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="lockscreen_album_art_filter"
+            android:title="@string/lockscreen_cover_filter_title"
+            android:entries="@array/lockscreen_cover_filter_entries"
+            android:entryValues="@array/lockscreen_cover_filter_values"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="5" />
     </PreferenceCategory>
 </PreferenceScreen>
