--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -46,6 +46,12 @@
             android:entryValues="@array/status_bar_battery_percentage_values"
             android:defaultValue="0" />
 
+    <Preference
+        android:key="aggressive_battery"
+        android:title="@string/aggressive_battery_title"
+        android:summary="@string/aggressive_battery_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.AggressiveBattery"/>
+
     <PreferenceCategory
         android:title="@string/battery_bar_title" >
 
