--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -45,6 +45,9 @@
             android:persistent="false"
             android:defaultValue="54" />
 
+    <PreferenceCategory
+        android:title="@string/lock_date_style_title" >
+
         <ListPreference
             android:key="lock_date_fonts"
             android:title="@string/lock_date_font_title"
@@ -63,6 +66,10 @@
             settings:units="dp"
             android:defaultValue="18"
             android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/lock_owner_style_title" >
 
         <ListPreference
             android:key="lock_ownerinfo_fonts"
@@ -82,4 +89,28 @@
             settings:units="sp"
             android:defaultValue="18"
             android:persistent="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/lock_typeface_style_title" >
+
+        <ListPreference
+            android:key="custom_text_clock_fonts"
+            android:title="@string/custom_text_clock_font_title"
+            android:dialogTitle="@string/lock_clock_font_dialog_title"
+            android:entries="@array/lock_clock_fonts_entries"
+            android:entryValues="@array/lock_clock_fonts_values"
+            android:summary="%s"
+            android:defaultValue="32"
+            android:persistent="false" />
+
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="custom_text_clock_font_size"
+            android:title="@string/custom_text_clock_font_size_title"
+            android:max="55"
+            settings:min="35"
+            settings:units="dp"
+            android:persistent="false"
+            android:defaultValue="40" />
+    </PreferenceCategory>
 </PreferenceScreen>
