--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -74,4 +74,23 @@
             settings:units="sp"
             android:defaultValue="18"
             android:persistent="false" />
+
+        <ListPreference
+            android:key="custom_text_clock_fonts"
+            android:title="@string/custom_text_clock_font_title"
+            android:dialogTitle="@string/lock_clock_font_dialog_title"
+            android:entries="@array/lock_clock_fonts_entries"
+            android:entryValues="@array/lock_clock_fonts_values"
+            android:summary="%s"
+            android:defaultValue="32"
+            android:persistent="false" />
+
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="custom_text_clock_font_size"
+            android:title="@string/custom_text_clock_font_size_title"
+            android:max="55"
+            settings:min="35"
+            settings:units="dp"
+            android:persistent="false"
+            android:defaultValue="40" />
 </PreferenceScreen>
