--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -16,17 +16,15 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Network Traffic Type -->
-    <string-array name="show_network_traffic_type_entries" translatable="false">
-        <item>@string/show_network_traffic_up</item>
-        <item>@string/show_network_traffic_down</item>
-        <item>@string/show_network_traffic_all</item>
+    <!-- Network Traffic View Placement -->
+    <string-array name="network_traffic_location_entries" translatable="false">
+        <item>@string/network_traffic_statusbar</item>
+        <item>@string/network_traffic_header</item>
     </string-array>
 
-    <string-array name="show_network_traffic_type_values" translatable="false">
-        <item>1</item>
-        <item>2</item>
+    <string-array name="network_traffic_location_values" translatable="false">
         <item>0</item>
+        <item>1</item>
     </string-array>
 
     <!--- Volume key cursor control -->
