--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -24,12 +24,22 @@
         android:title="@string/network_traffic_state_title"
         android:defaultValue="false" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        android:key="network_traffic_view_location"
+        android:title="@string/network_traffic_location_title"
+        android:entries="@array/network_traffic_location_entries"
+        android:entryValues="@array/network_traffic_location_values"
+        android:dependency="network_traffic_state"
+        android:summary="%s"
+        android:defaultValue="0" />
+
     <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
         settings:min="0"
-        settings:units="" />
+        settings:units=""
+        android:dependency="network_traffic_state" />
 
     <SwitchPreference
         android:key="network_traffic_hidearrow"
