--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -42,6 +42,13 @@
         android:title="@string/switch_settings_title" >
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_charging_animation"
+            android:title="@string/lockscreen_charging_animation_title"
+            android:summary="@string/lockscreen_charging_animation_summary"
+            android:defaultValue="true" />
+
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_show_status_bar"
             android:title="@string/lockscreen_show_status_bar_title"
             android:summary="@string/lockscreen_show_status_bar_summary"
