--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -885,6 +885,19 @@
         <item>6</item>
     </string-array>
 
+     <!-- Lockscreen date styles -->
+    <string-array name="lockscreen_date_selection_entries" translatable="false">
+        <item>@string/lockscreen_date_selection_default</item>
+        <item>@string/lockscreen_date_selection_str_box</item>
+        <item>@string/lockscreen_date_selection_str_round</item>
+    </string-array>
+
+    <string-array name="lockscreen_date_selection_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Notification ticker -->
      <string-array name="ticker_animation_mode_entries" translatable="false">
         <item>@string/ticker_animation_mode_alpha_fade</item>
