--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -48,6 +48,14 @@
     <PreferenceCategory
         android:title="@string/lock_date_style_title" >
 
+        <com.dirtyunicorns.support.preferences.SecureSettingListPreference
+            android:key="lockscreen_date_selection"
+            android:title="@string/lockscreen_date_selection_title"
+            android:dialogTitle="@string/lockscreen_date_dialog_title"
+            android:entries="@array/lockscreen_date_selection_entries"
+            android:entryValues="@array/lockscreen_date_selection_values"
+            android:defaultValue="0" />
+
         <ListPreference
             android:key="lock_date_fonts"
             android:title="@string/lock_date_font_title"
