--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -66,6 +66,12 @@
             android:title="@string/three_finger_gesture" 
             android:summary="@string/three_finger_gesture_summary" 
             android:defaultValue="false" /> 
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_sleep_gesture_title"
+            android:summary="@string/double_tap_sleep_gesture_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
