--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -24,6 +24,12 @@
         android:summary="@string/corners_summary"
         android:fragment="com.dirtyunicorns.tweaks.fragments.RoundedCornersSettings" />
 
+    <Preference
+        android:key="animations_category"
+        android:title="@string/animation_settings_title"
+        android:summary="@string/animation_settings_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.AnimationSettings" />
+
     <com.dirtyunicorns.support.preferences.SystemSettingListPreference
         android:key="screenshot_type"
         android:entries="@array/screenshot_type_entries"
