--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -73,6 +73,11 @@
             android:summary="@string/lockscreen_battery_info_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="pocket_judge" 
+            android:title="@string/pocket_judge_title" 
+            android:summary="@string/pocket_judge_summary" 
+            android:defaultValue="false" />	
     </PreferenceCategory>
 
     <PreferenceCategory
