--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -50,7 +50,13 @@
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
-	android:defaultValue="false" />
+        android:defaultValue="false" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="pocket_judge"
+        android:title="@string/pocket_judge_title"
+        android:summary="@string/pocket_judge_summary"
+        android:defaultValue="false" />
 
     <PreferenceCategory
         android:key="lockscreen_media_category"
