--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -102,21 +102,21 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="qs_brightness_category"
-        android:title="@string/qs_brightness_title">
+        android:key="brightness_slider"
+        android:title="@string/qs_brightness_slider_title">
+
+        <com.dirtyunicorns.support.preferences.SecureSettingListPreference
+            android:key="qs_show_brightness_slider"
+            android:title="@string/qs_brightness_slider_title"
+            android:entries="@array/qs_brightness_slider_entries"
+            android:entryValues="@array/qs_brightness_slider_values"
+            android:defaultValue="1" />
 
         <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
-            android:key="qs_show_brightness"
-            android:title="@string/qs_show_brightness_title"
-            android:summary="@string/qs_show_brightness_summary"
+            android:key="qs_show_auto_brightness"
+            android:title="@string/brightness_icon_title"
+            android:summary="@string/brightness_icon_summary"
             android:defaultValue="true" />
-
-        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
-            android:key="qs_brightness_position_bottom"
-            android:title="@string/qs_brightness_position_bottom_title"
-            android:summary="@string/qs_brightness_position_bottom_summary"
-            android:defaultValue="true"
-            android:dependency="qs_show_brightness" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
