DUTweaks: Readd Navbar Layout selection
Change-Id: Iae6bbef371f09cd2bf71763e5aeef2461f31e35c
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -30,6 +30,15 @@
             android:title="@string/navbar_invert_layout_title"
             android:defaultValue="false" />
 
+    <ListPreference
+        android:key="nav_bar_layout"
+        android:title="@string/nav_bar_layout"
+        android:summary="%s"
+        android:defaultValue="default"
+        android:persistent="false"
+        android:entries="@array/nav_bar_layouts"
+        android:entryValues="@array/nav_bar_layouts_values" />
+
     <PreferenceCategory
         android:key="hardware_keys"
         android:title="@string/hardware_keys_category" >
