--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -518,4 +518,14 @@
         <item>6</item>
         <item>7</item>
     </string-array>
+
+    <!-- Volume steps -->
+    <string-array name="volume_steps_entries" translatable="false">
+        <item>60</item>
+        <item>45</item>
+        <item>30</item>
+        <item>15</item>
+        <item>7</item>
+        <item>5</item>
+    </string-array>
 </resources>
