DUTweaks: Create new fragment for signal icon stuff *also move powermenu dim on bottom
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -33,34 +33,11 @@
         android:summary="@string/status_bar_logo_summary"
         android:defaultValue="false" />
 
-    <PreferenceCategory
-        android:title="@string/signal_icon_title">
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="show_fourg_icon"
-            android:title="@string/show_fourg_icon_title"
-            android:summary="@string/show_fourg_icon_summary"
-            android:defaultValue="false"/>
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="show_volte_icon"
-            android:title="@string/volte_icon_title"
-            android:summary="@string/volte_icon_summary"
-            android:defaultValue="true"/>
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="roaming_indicator_icon"
-            android:title="@string/roaming_indicator_icon_title"
-            android:summary="@string/roaming_indicator_icon_summary"
-            android:defaultValue="true"/>
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="data_disabled_icon"
-            android:title="@string/data_disabled_icon_title"
-            android:summary="@string/data_disabled_icon_summary"
-            android:defaultValue="true"/> 
-
-    </PreferenceCategory>
+    <Preference
+        android:key="signal_icon_switch"
+        android:title="@string/signal_icon_switch_title"
+        android:summary="@string/signal_icon_switch_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.SignalIconSwitch" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="toast_icon"
