DUTweaks: Custom Rounded Corner and Padding preferences [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -118,4 +118,11 @@
             android:defaultValue="true" />
 
     </PreferenceCategory>
+
+    <!-- Rounded Corners -->
+    <PreferenceScreen
+         android:key="rounded_corners"
+         android:title="@string/corners_title"
+         android:summary="@string/corners_summary"
+         android:fragment="com.dirtyunicorns.tweaks.fragments.RoundedCornersSettings" />
 </PreferenceScreen>
