DUTweaks: NetworkTraffic positioning: Adapt to new settings flags.
Partially based on:
https://github.com/calebcabob/CoralReef/commit/1146bf83de9d72eb2d153bd87bbe0898225381a3

spezi77 edits:
-Clean up the code
-Refactorized to work with our new commit: https://github.com/PixelDust-Project-X/android_frameworks_base/commit/c11cb77923fd09b866bb3d54a3a6a708034c09af

Change-Id: I5fc55ed94a1c9fabacde19e128baaa172a4b4a4c
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -43,8 +43,7 @@
         android:max="30"
         settings:min="18"
         settings:defaultValue="21"
-        settings:units="dp" 
-        android:dependency="network_traffic_state" />
+        settings:units="dp" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="network_traffic_arrow"
@@ -56,6 +55,6 @@
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
-        settings:units=""
-        android:dependency="network_traffic_state" />
+        settings:min="0"
+        settings:units="" />
 </PreferenceScreen>
