DUTweaks: AmbientLight: add visual preview
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/xml/pulse_notification_lights.xml
+++ b/res/xml/pulse_notification_lights.xml
@@ -18,6 +18,12 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/pulse_ambient_light_title" >
 
+        <!-- Preview -->
+        <com.dirtyunicorns.tweaks.preferences.AmbientLightSettingsPreview
+            android:key="ambientlight_preview"
+            android:layout="@layout/ambient_light"
+            android:selectable="false"/>
+
         <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
             android:key="pulse_ambient_light_duration"
             android:title="@string/pulse_ambient_light_duration_title"
