--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -31,4 +31,8 @@
 
     <!-- FOD icon picker-->
     <color name="fod_item_background_stroke_color">#d6d6d6</color>
+
+    <!-- Ambient lights-->
+    <color name="ambient_light_screen_color">#111111</color>
+    <color name="ambient_light_body_color">#323232</color>
 </resources>
