--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -29,4 +29,6 @@
     <color name="accent_picker_white_accent">@android:color/white</color>
     <color name="accent_picker_dark_accent">@android:color/black</color>
 
+    <!-- FOD icon picker-->
+    <color name="fod_item_background_stroke_color">#d6d6d6</color>
 </resources>
