--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -31,6 +31,13 @@
         android:summary="@string/lockscreen_style_summary"
         android:fragment="com.dirtyunicorns.tweaks.fragments.LockscreenStyle" />
 
+    <!-- FOD icon picker -->
+    <Preference
+        android:key="fod_icon_picker_category"
+        android:title="@string/fod_icon_picker_title"
+        android:summary="@string/fod_icon_picker_summary"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.FODIconPickerFragment" />
+
     <PreferenceCategory
         android:title="@string/switch_settings_title" >
 
