DUTweaks: GamingMode: Option to disable notification feedback [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -25,6 +25,12 @@
         android:summary="%s"
         android:defaultValue="1" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="gaming_mode_notifications_feedback"
+        android:title="@string/gaming_mode_notifications_feedback_title"
+        android:summary="@string/gaming_mode_notifications_feedback_summary"
+        android:defaultValue="true" />
+
     <!-- Manual brightness -->
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_manual_brightness_toggle"
