--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -26,12 +26,6 @@
             android:defaultValue="true" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="less_boring_heads_up"
-            android:title="@string/less_boring_heads_up_title"
-            android:summary="@string/less_boring_heads_up_summary"
-            android:defaultValue="false" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="notification_sound_vib_screen_on"
             android:title="@string/notification_sound_vib_screen_on_title"
             android:summary="@string/notification_sound_vib_screen_on_summary"
@@ -42,6 +36,18 @@
             android:title="@string/enable_fc_notifications_title" 
             android:summary="@string/enable_fc_notifications_summary" 
             android:defaultValue="true" /> 
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
+            android:key="charging_animation"
+            android:title="@string/charging_animation_title"
+            android:summary="@string/charging_animation_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="charging_vibration_enabled"
+            android:title="@string/vibration_on_charge_state_changed_title"
+            android:summary="@string/vibration_on_charge_state_changed_summary"
+            android:defaultValue="true" />
 
         <!-- Flashlight on incoming calls -->
         <ListPreference
