--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -24,37 +24,11 @@
             android:summary="@string/corners_summary"
             android:fragment="com.dirtyunicorns.tweaks.fragments.RoundedCornersSettings" />
 
-        <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
-            android:key="gaming_mode_enabled"
-            android:fragment="com.dirtyunicorns.tweaks.fragments.GamingMode"
-            android:title="@string/gaming_mode_title"
-            android:summary="@string/gaming_mode_summary"
-            android:defaultValue="false" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
-           android:key="screen_state_toggles_enable_key"
-           android:fragment="com.dirtyunicorns.tweaks.fragments.ScreenStateToggles"
-           android:title="@string/screen_state_toggles_title"
-           android:summary="@string/screen_state_toggles_summary"
-           android:defaultValue="false" />
-
     	<Preference
             android:key="animations_category"
             android:title="@string/animation_settings_title"
             android:summary="@string/animation_settings_summary"
             android:fragment="com.dirtyunicorns.tweaks.fragments.AnimationSettings" />
-
-        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
-            android:key="charging_vibration_enabled"
-            android:title="@string/vibration_on_charge_state_changed_title"
-            android:summary="@string/vibration_on_charge_state_changed_summary"
-            android:defaultValue="true" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
-            android:key="charging_animation"
-            android:title="@string/charging_animation_title"
-            android:summary="@string/charging_animation_summary"
-            android:defaultValue="false" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="screenshot_type"
@@ -71,6 +45,23 @@
             android:entries="@array/entries_scrollingcache"
             android:entryValues="@array/values_scrollingcache" />
 
+    <PreferenceCategory
+        android:title="@string/switch_category">
+
+        <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
+            android:key="gaming_mode_enabled"
+            android:fragment="com.dirtyunicorns.tweaks.fragments.GamingMode"
+            android:title="@string/gaming_mode_title"
+            android:summary="@string/gaming_mode_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
+           android:key="screen_state_toggles_enable_key"
+           android:fragment="com.dirtyunicorns.tweaks.fragments.ScreenStateToggles"
+           android:title="@string/screen_state_toggles_title"
+           android:summary="@string/screen_state_toggles_summary"
+           android:defaultValue="false" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="sensor_block"
            android:title="@string/sensor_block_title"
@@ -82,6 +73,7 @@
            android:title="@string/allow_signature_fake"
            android:summary="@string/allow_signature_fake_summary"
            android:defaultValue="false" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/gestures_stuff" >
