--- a/res/xml/settings_animations.xml
+++ b/res/xml/settings_animations.xml
@@ -43,6 +43,15 @@
         android:persistent="false"
         android:defaultValue="0" />
 
+    <ListPreference
+        android:key="power_menu_animations"
+        android:title="@string/power_menu_animation_title"
+        android:dialogTitle="@string/power_menu_animation_dialog_title"
+        android:entries="@array/power_menu_animations_entries"
+        android:entryValues="@array/power_menu_animations_values"
+        android:summary="@string/power_menu_animation_summary"
+        android:persistent="false" />
+
     <PreferenceCategory
         android:title="@string/qs_tile_animation_category">
 
