DUTweaks: Tint category icons to match background color
Change-Id: I891b2fe7d3c3bae611995820b4f2107f15533ab8
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/drawable/dt_active_edge.xml
+++ b/res/drawable/dt_active_edge.xml
@@ -18,7 +18,8 @@
     android:width="80.000000dp"
     android:height="80.000000dp"
     android:viewportWidth="512.000000"
-    android:viewportHeight="512.000000">
+    android:viewportHeight="512.000000"
+    android:tint="@color/dirty_tweaks_category_icon_tint">
 
     <group
         android:translateY="512.000000"
