--- a/res/drawable/dt_miscellaneous.xml
+++ b/res/drawable/dt_miscellaneous.xml
@@ -2,6 +2,10 @@
     android:height="80dp"
     android:width="80dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="#fff" android:pathData="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z" />
+    android:viewportHeight="24"
+    android:tint="@color/dirty_tweaks_category_icon_tint">
+
+    <path
+        android:fillColor="#fff"
+        android:pathData="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z" />
 </vector>
